frontend/app/src/static/less/layout.less
/* ... */
.height-small .group-heading:not([class^="justified"]):not([class*=" justified"]):not(.instruction){
  padding-top: 5px;
  padding-bottom: 10px;
  font-size: @size-font-not-so-large;
}

// FIXME: refactor or move (overrides.less)
@margin-top-heading-justified: -20px;
// 1. Justify whitespace between toolbar and content
.group-heading.justified,
.container-toolbar + .container-fluid--inner .group-heading.justified-under-toolbar {
  margin-top: @margin-top-heading-justified; // [1]
}

// FIXME: refactor or move (overrides.less)
.group-heading.instruction {
  margin-top: @grid-vertical * 1.5;
  padding-top: 2vh;
}

// 1. Override default top and bottom padding.
.group-heading.shrinked {
  padding-top: 0;     // [1]
  padding-bottom: 0;  // [1]
  &.long {
    font-size: @size-font-not-so-large;
  }
}

// Override for .group-heading.instruction: iPhone 4s, less top margin for instruction headings
.height-small .group-heading.instruction {
  margin-top: @grid-vertical-half;
}

.group-heading .highlighted {
  color: @color-text-highlighted;
}

/*
`.group-error` groups together multiple error messages.
*/
.group-error {
  position: absolute;
  margin-top: -10px;
  line-height: @grid-vertical-small;
}

.group-error.height-large {
  margin-top: 0;
}

.group-error.comfortable {
  position: initial;
  height: @grid-vertical-small;
}

/*
`.group-symmetrical` groups together up to three adjacent elements
symmetrically so that `.group-symmetrical-middle` is always in the
center.

Not compatible with `.row` so we need to apply padding-left and -right inside.

*/

@max-width-group-symmetrical-middle: 70px;

.group-symmetrical--left, .group-symmetrical--right {
  display: table-cell;
  vertical-align: middle;
}

.group-symmetrical {
  height: @grid-vertical;
  line-height: @grid-vertical;
}

@group-symmetrical-edge-padding-to-center: 10px;
// 1. Inherit varying container height.
.group-symmetrical--left {
  height: inherit;  // [1]
  text-align: left;
  float: left;
  padding-left: @grid-horizontal;
  padding-right: @group-symmetrical-edge-padding-to-center;
}

// 1. Vertically and horizontally align the content of the middle element.
// Works with <a><span></span></a> structure. Unfortunately a <button> element does not work here
// because that buttons don't work with display:table*. Bootstrap has a similar solution:
// http://getbootstrap.com/components/#input-groups-buttons
// 2. Make sure icon-calendar does not increase height by setting it to block element.
.group-symmetrical--middle {
  position: absolute;
  .center-horizontally-absolute;
  max-width: @max-width-group-symmetrical-middle;
  height: inherit;

  & > a {                        // [1]
    display: table;
    width: 100%;
    height: inherit;
    & > span,
    & > div {                   // [1]
      text-align: center;
      height: inherit;
      display: table-cell;
      vertical-align: middle;
    }
    & > span.icon-calendar, & > span.icon-tag {
      display: block; // [2]
    }
  }
}

.text-heading-primary--outer {
  display: table;
  width: 100%;
  .text-heading-primary--inner {
    text-align: center;
    height: inherit;
    display: table-cell;
    vertical-align: middle;
  }
}

// 1. Inherit varying container height.
.group-symmetrical--right {
  height: inherit;  // [1]
  float: right;
  padding-right: @grid-horizontal;
  padding-left: @group-symmetrical-edge-padding-to-center;
}

@margin-top-heading: 9px;
@margin-bottom-heading: 9px;

// 1. Set margin-top|bottom for large .group-symmetrical to add space on top|bottom of it.
.group-symmetrical {
  &.height-large--top {
    margin-top: @margin-top-heading;  // [1]
  }
  &.height-large--bottom {
    margin-bottom: @margin-bottom-heading;  // [1]
  }
}

.group-symmetrical--middle.width-large {
  max-width: @max-width-group-symmetrical-middle * 2;
}

// .container-toolbar has a special .group-symmetrical
@height-toolbar: 62px;
.container-toolbar .group-symmetrical {
  height: @height-toolbar;
  line-height: @height-toolbar;
}

// .modal-toolbar has a special .group-symmetrical
@height-modal-toolbar: 30px;
.modal-toolbar.group-symmetrical {
  height: @height-modal-toolbar;
  line-height: @height-modal-toolbar;
  .group-symmetrical--right {
    padding-right: 14px;
  }
}

// Desktop version using side-by-side links
// 1. 'close' / 'saving' / 'save' needs to not move the trash can on its left
// 2. For recurring editor, the trash can needs to be pushed a bit down
.group-symmetrical--right.side-by-side {
  padding-right: 0;
  .link-side-by-side{
    padding-top: 10px;
    padding-bottom: 10px;
  }
  .link-side-by-side:first-child{
    padding-left: 10px;
    padding-right: 10px;
  }
  .link-side-by-side:last-child{
    padding-left: 20px;
    padding-right: @grid-horizontal + 38px;  // [1]
    .text-navigation, .icon-trash {
      position: absolute;  // [1]
      right: @grid-horizontal;
    }
    .icon-trash {
      top: 21px; // [2]
    }
  }
}

.group-centered {
  width: 100%;
  text-align: center;
}

// Disables every element inside the container
.container-disabled {
  * {
    pointer-events: none;
    color: @color-text-disabled;
  }
  a.active {
    pointer-events: auto !important;
    span {
      pointer-events: auto !important;
    }
  }
  .swiper-wrapper {
    pointer-events: auto !important;
  }
}

// Groups rows of detailed comments
.group-details {
  .row {
    line-height: @grid-vertical-small;
  }
  .row:last-child{
    padding-bottom: @grid-vertical-half;
  }
}

// Groups external foreign html
.group-html-external {
  h1 {
    font-size: 24px;
    padding-top: 15px;
    padding-bottom: 15px;
  }
  h2 {
    font-size: 18px;
  }
  h3 {
    font-size: 16px;
  }
  h4 {
    padding-top: 10px;
    font-size: 14px;
  }
  p, li {
    font-size: 12px;
  }
}

/*
**************************************************************************
# Swiper
*/

// 1. Inherit height for .swiper-wrapper and .swiper-slide
.swiper-wrapper, .swiper-slide {
  height: inherit; // [1]
}
/* ... */

